--- a/mp1.css
+++ b/mp1.css
@@ -56,9 +56,13 @@ h6 {
   margin: 0;
 }
 .navbar-toggler {
-  background: rgb(68, 67, 67);
+  background: rgb(11, 192, 137);
+  border: 125px;
+  border-color: black;
 }
-
+.navbar-toggler-icon {
+  color: black;
+}
 .navbar {
   background: rgba(27, 27, 27, 0.5);
 }
@@ -72,7 +76,7 @@ nav ul li a:hover span:nth-child(1) {
 }
 
 nav ul li a:hover span {
-  color: gold;
+  color: rgb(248, 225, 95);
   text-shadow: 0 0 10px hsl(0, 0%, 100%), 0 0 20px hsl(0, 0%, 100%),
     0 0 40px hsl(0, 0%, 100%);
 }
@@ -82,8 +86,6 @@ nav ul li a span {
 }
 
 #Homeimage {
-  width: 60%;
-  margin-bottom: 50px;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
 }
@@ -209,7 +211,7 @@ h2:hover span {
 }
 
 .logo {
-  color: gold;
+  color: rgb(11, 192, 137);
 }
 
 #about {
