--- a/mp1.css
+++ b/mp1.css
@@ -46,6 +46,7 @@ h6 {
   font-family: "Airquantum0";
   color: rgba(240, 240, 240, 100%);
   letter-spacing: 7px;
+  margin-bottom: 450px;
 }
 
 .subheading:hover span:nth-child(1) {
@@ -181,6 +182,21 @@ h2:hover span {
   font-family: "AirQuantum0";
 }
 
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: none;
+}
+
+a:active {
+  text-decoration: none;
+}
+
 #buynowbtnxs {
   color: whitesmoke;
   background-color: rgb(5, 118, 5);
@@ -245,6 +261,8 @@ h2:hover span {
 
 .aboutus {
   font-family: "AirQuantum0";
+  letter-spacing: 5px;
+  cursor: pointer;
 }
 
 .aboutusnobox {
@@ -332,6 +350,7 @@ h2:hover span {
 }
 .card-title {
   font-family: "Airquantum0";
+  letter-spacing: 5px;
 }
 .card-text {
   color: gray;
