--- a/mp1.css
+++ b/mp1.css
@@ -113,7 +113,7 @@ nav ul li a span {
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  margin-bottom: 100px;
+  padding-bottom: 100px;
 }
 #Homeimage:hover {
   transform: scale(1.03);
