--- a/mp1.css
+++ b/mp1.css
@@ -9,13 +9,8 @@
 }
 
 @font-face {
-  font-family: "Draco";
-  src: url(fonts/Draco-OV5yp.otf);
-}
-
-@font-face {
-  font-family: "futuracondbold";
-  src: url(fonts/Futura\ Condensed\ Bold.otf);
+  font-family: "Rexlia";
+  src: url(fonts/rexlia\ rg.otf);
 }
 
 html {
@@ -58,14 +53,14 @@ h6 {
 }
 
 .subheading:hover span {
-  color: rgb(159, 5, 173);
+  color: white;
   text-shadow: 0 0 10px hsl(0, 0%, 100%), 0 0 20px hsl(0, 0%, 100%),
     0 0 40px hsl(0, 0%, 100%);
 }
 .nav-item {
+  font-size: 20px;
   color: white;
   list-style-type: none;
-  display: inline-block;
   padding: 0;
   margin: 0;
 }
@@ -113,7 +108,7 @@ nav ul li a span {
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  padding-bottom: 100px;
+  padding-bottom: 110px;
 }
 #Homeimage:hover {
   transform: scale(1.03);
@@ -134,11 +129,9 @@ h1 {
   letter-spacing: 7px;
   cursor: pointer;
 }
-
 h1:hover span:nth-child(1) {
   margin-right: 5px;
 }
-
 h1:hover span {
   color: hsl(0, 0%, 100%);
   text-shadow: 0 0 10px hsl(0, 0%, 100%), 0 0 20px hsl(0, 0%, 100%),
@@ -150,7 +143,7 @@ h1 span {
 }
 
 h2 {
-  font-family: "futuracondbold";
+  font-family: "Airquantum0";
   color: whitesmoke;
 }
 
@@ -163,13 +156,15 @@ h2 span {
 }
 
 h2:hover span {
-  color: rgb(159, 5, 173);
+  color: rgb(8, 173, 5);
   text-shadow: 0 0 10px hsl(0, 0%, 100%), 0 0 20px hsl(0, 0%, 100%),
     0 0 40px hsl(0, 0%, 100%);
 }
 
 .description {
-  font-family: "Courier New";
+  font-family: "Rexlia";
+  letter-spacing: 3px;
+  font-size: px;
 }
 
 .btn {
@@ -180,6 +175,8 @@ h2:hover span {
   left: calc(50% -75px);
   top: calc(50% -25px);
   font-family: "AirQuantum0";
+  letter-spacing: 2px;
+  font-size: 18px;
 }
 
 a:link {
@@ -260,9 +257,17 @@ a:active {
 }
 
 .aboutus {
-  font-family: "AirQuantum0";
-  letter-spacing: 5px;
+  font-family: "Rexlia";
+  letter-spacing: 2px;
   cursor: pointer;
+  font-size: 50px;
+}
+
+.aboutus1 {
+  font-family: "Rexlia";
+  letter-spacing: 2px;
+  cursor: pointer;
+  font-size: 30px;
 }
 
 .aboutusnobox {
@@ -298,8 +303,9 @@ a:active {
 }
 
 .sponsors {
-  font-family: "Airquantum0";
+  font-family: "Rexlia";
   letter-spacing: 4px;
+  opacity: 70%;
 }
 #collab {
   flex: auto;
@@ -527,16 +533,22 @@ a:active {
   color: white;
   margin: 0px;
   padding: 0px;
-  font-family: "Arial";
 }
 
+.btnwallet {
+  font-family: AirQuantum0;
+  letter-spacing: 4px;
+}
 #footer {
-  font-family: "Cardo";
+  font-family: "Rexlia";
   background: linear-gradient(180deg, rgb(32, 36, 39) 0%, rgb(19, 19, 19) 100%);
   color: gray;
 }
+.footer-description {
+  font-size: 20px;
+}
 .footer-item {
-  font-family: "Roboto";
+  font-family: "Rexlia";
 }
 #logo2 {
   color: white;
@@ -546,8 +558,12 @@ a:active {
   display: block;
   color: white;
   letter-spacing: 1px;
+  font-size: 15px;
+  margin-top: 10px;
 }
-
+.footer-list {
+  margin-top: 20px;
+}
 .footer a:link {
   text-decoration: none;
 }
@@ -593,4 +609,25 @@ a:active {
   background: rgba(45, 45, 45, 0.7);
   color: white;
   margin-bottom: 10px;
+}
+
+.btndiscord {
+  width: 350px;
+  height: 100px;
+  border-radius: 150px;
+  position: relative;
+  left: calc(50% -75px);
+  top: calc(50% -25px);
+  font-family: "AirQuantum0";
+  font-size: 20px;
+  letter-spacing: 2px;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.btndiscord:hover {
+  background-color: rgb(114, 137, 218);
+  color: white;
+  transform: scale(1.2);
+  z-index: 2;
 }
