--- a/mp1.css
+++ b/mp1.css
@@ -58,7 +58,8 @@ h6 {
     0 0 40px hsl(0, 0%, 100%);
 }
 .nav-item {
-  font-size: 20px;
+  font-size: 30px;
+  letter-spacing: 4px;
   color: white;
   list-style-type: none;
   padding: 0;
@@ -76,8 +77,7 @@ h6 {
   background: rgba(27, 27, 27, 0.5);
 }
 nav {
-  font-family: "Draco";
-  color: white;
+  font-family: "AirQuantum";
 }
 
 nav ul li a:hover span:nth-child(1) {
